<resources>
    <string name="app_name">Modul Ekoratif</string>
    <string name="pengantar_petunjuk">Untuk mencapai tujuan dan prestasi belajar secara maksimal, berikut adalah langkah-langkah yang perlu kamu ikuti agar dapat memahami serta menggunakan modul ini dengan baik :</string>
    <string name="petunjuk_1">Berdoalah kepada Tuhan Yang Maha Esa sesuai dengan kepercayaan dan agamamu masing-masing.</string>
    <string name="petunjuk_2">Pahamilah capaian pembelajaran dan tujuan pembelajaran yang tercantum agar kamu dapat mengetahui materi apa yang akan kamu pelajari dalam modul ini.</string>
    <string name="petunjuk_3">Bacalah dan pahamilah uraian materi yang terdapat dalam modul dengan seksama.</string>
    <string name="petunjuk_4">Klik tombol</string>
    <string name="petunjuk_4_1">untuk menuju ke halaman</string>
    <string name="petunjuk_4_2">selanjutnya, dan klik tombol</string>
    <string name="petunjuk_4_3">untuk ke</string>
    <string name="petunjuk_4_4">halaman sebelumnya</string>
    <string name="petunjuk_5">Kamu juga bisa klik tombol</string>
    <string name="petunjuk_5_1">untuk kembali</string>
    <string name="petunjuk_5_2">ke bagian daftar isi</string>
    <string name="petunjuk_6">Catatlah uraian materi yang menurutmu penting untuk menunjang pemahamanmu.</string>
    <string name="petunjuk_7">Kerjakanlah juga setiap rangkaian tugas dan soal evaluasi untuk mengukur penguasaan materi dalam modul ini.</string>
    <string name="petunjuk_8">Jika setelah membaca, mengerjakan tugas, melaksanakan proyek, serta mengerjakan soal evaluasi kamu masih memperoleh hasil yang kurang memuaskan, maka ulangi kembali proses membaca dan memahami materi pada modul ini!</string>
    <string name="no_1">1.</string>
    <string name="no_2">2.</string>
    <string name="no_3">3.</string>
    <string name="no_4">4.</string>
    <string name="no_5">5.</string>
    <string name="no_6">6.</string>
    <string name="no_7">7.</string>
    <string name="no_8">8.</string>
    <string name="no_9">9.</string>
    <string name="no_10">10.</string>
    <string name="no_11">11.</string>
    <string name="no_12">12.</string>
    <string name="no_13">13.</string>
    <string name="semangat">JANGAN PUTUS ASA DAN TETAP SEMANGAT!</string>
    <string name="capaian_pembelajaran">Capaian Pembelajaran</string>
    <string name="content_cp">Melalui modul ini ada kompetensi yang diharapkan dapat dicapai selama pembelelajaran, bacalah Capaian Pembelajaran di bawah ini dengan seksama agar kamu dapat mencapai prestasi belajar dengan maksimal :</string>
    <string name="petunjuk_penggunaan_modul">Petunjuk Penggunaan Modul</string>
    <string name="tujuan_pembelajaran">Tujuan Pembelajaran</string>
    <string name="content_tp">Berikut adalah beberapa tujuan pembelajaran yang dimuat dalam materi pelajaran Kegiatan Ekonomi dan Ekonomi Kreatif :</string>
    <string name="tujuanpembelajaran_1">Melalui pengamatan gambar “Kegiatan di Pasar”, siswa dapat mengidentifikasi kegiatan ekonomi yang ada di masyarakat.</string>
    <string name="tujuanpembelajaran_2">Melalui kegiatan diskusi dengan teman sebangku, siswa dapat menjelaskan pengertian kegiatan ekonomi.</string>
    <string name="tujuanpembelajaran_3">Melalui kegiatan membaca infografis "Kegiatan Ekonomi", siswa dapat menjelaskan pengertian produksi, distribusi, dan konsumsi yang ada di masyarakat.</string>
    <string name="tujuanpembelajaran_4">Melalui pengamatan video “Ekonomi Kreatif”, siswa dapat menjelaskan pengertian ekonomi kreatif.</string>
    <string name="tujuanpembelajaran_5">Melalui kegiatan menyimak infografis dan penjelasan audio, siswa dapat menganalisis berbagai bidang ekonomi kreatif.</string>
    <string name="tujuanpembelajaran_6">Melalui kegiatan kreasi "<b><i>Mind Mapping</i></b>", siswa dapat mengidentifikasi 5 bidang ekonomi kreatif yang ada di lingkungan sekitar.</string>
    <string name="tujuanpembelajaran_7">Melalui kegiatan pengamatan dan wawancara, siswa dapat menganalisis peluang usaha barang atau jasa yang mungkin dilakukan di lingkungan sekolah.</string>
    <string name="tujuanpembelajaran_8">Melalui kegiatan “Ide Usahaku”, siswa dapat menentukan ide usaha yang mungkin dilakukan di lingkungan sekolah.</string>
    <string name="tujuanpembelajaran_9">Melalui membaca cerita “Bazar Ceria”, siswa dapat menguraikan persiapan yang diperlukan dalam melaksanakan kegiatan usaha.</string>
    <string name="tujuanpembelajaran_10">Melalui kegiatan diskusi kelompok, siswa dapat mempersiapkan hal yang diperlukan dalam melaksanakan kegiatan usaha (membuat poster iklan, daftar menu, dan lain sebagainya). </string>
    <string name="tujuanpembelajaran_11">Melalui kegiatan “Market Day” siswa melaksanakan kegiatan usaha, guru melakukan pendampingan.</string>
    <string name="tujuanpembelajaran_12">Melalui pengisian lembar “Refleksi Proyek”, siswa dapat membuat laporan dari usaha yang telah dilaksanakan.</string>
    <string name="tujuanpembelajaran_13">Melalui kegiatan presentasi, siswa dapat mempresentasikan proses berjalannya usaha serta hasil refleksi.</string>
    <string name="kegiatan_ekonomi">Kegiatan Ekonomi</string>
    <string name="content_box_mke">Pernahkah kalian membeli sayuran di pasar? Selain itu, apakah kalian juga pernah membantu orang tua berjualan? Apabila pernah maka kalian telah melakukan kegiatan ekonomi. Kira-kira apa yang dimaksud dengan kegiatan ekonomi?\n<b>Coba diskusikanlah dengan teman sebangkumu!</b></string>
    <string name="conv_nine_guru_1">Setelah berdiskusi dengan teman sebangkumu apakah kini kamu mengetahui apa itu kegiatan ekonomi?</string>
    <string name="nine_siswa_one">Saya sudah mengetahuinya Bu, akan tetapi Saya masih sedikit bingung, apa itu kegiatan ekonomi?</string>
    <string name="nine_guru_two">Sekarang coba kamu perhatikan penjelasan berikut ini!</string>
    <string name="list_kunjaw">Kunci Jawaban Latihan Soal:\n1. BENAR\n2. BENAR\n3. SALAH\n4. BENAR\n5. SALAH\n6. BENAR\n7. BENAR\n8. SALAH\n9. SALAH\n10. BENAR</string>
    <string name="list_kunjaw_evaluasi">Kunci Jawaban Evaluasi Akhir:\n1. C\n2. A\n3. B\n4. C\n5. D\n6. C\n7. ESSAY\n8. ESSAY</string>
    <string name="orang_yang_berhasil_adalah_mereka_yang_bersungguh_sungguh">\"orang yang berhasil adalah mereka yang bersungguh-sungguh\"</string>
    <string name="daftar_pustaka">Daftar Pustaka</string>
    <string name="materi_kegiatan_ekonomi">Materi Kegiatan Ekonomi</string>
    <string name="link_dapus_1">Hernawan, I. (2021). Manajemen Sumber Daya Memanfaatkan Sumber Daya. Diakses pada 30 April 2023, dari https://lmsspada.kemdikbud.go.id/mod/forum/discuss.php?d=8150</string>
    <string name="link_dapus_2">Nugroho. (2022). Tips Menjadi Konsumen yang Baik. Diakses pada 30 April 2023, dari https://www.kompasiana.com/nugroho_sbm/622b8586bb448661c5779a03/tips-menjadi-konsumen-yang-baik</string>
    <string name="link_dapus_3">Pengelola Web Direktorat SMP. (2022). Kegiatan Ekonomi: Produksi, Distribusi, dan Konsumsi. Diakses pada 14 Januari 2023, dari https://ditsmp.kemdikbud.go.id/kegiatan-ekonomi-produksi-distribusi-dan-konsumsi/</string>
    <string name="link_dapus_4">Tim GTK Dikdas. (2021). Modul Belajar Mandiri Bidang Studi Pendidikan Guru Sekolah Dasar - IPS. Jakarta : Direktorat GTK Pendidikan Dasar Kementerian Pendidikan dan Kebudayaan</string>
    <string name="link_dapus_mek_1">Baparekraf Republik Indonesia. (2023).. Subsektor Ekonomi Kreatif. Diakses pada 14 Januari 2023, dari https://kemenparekraf.go.id/layanan/Subsektor-Ekonomi-Kreatif</string>
    <string name="link_dapus_mek_2">Madani, A. (2021). Pengertian Ekonomi Kreatif: Ciri-Ciri, Jenis, dan Manfaatnya Bagi Negara Indonesia. Diakses pada 14 Januari 2023, dari https://www.gramedia.com/literasi/pengertian-ekonomi-kreatif/</string>
    <string name="materi_ekonomi_kreatif">Materi Ekonomi Kreatif</string>
    <string name="title_cover_belakang">PENDIDIKAN GURU SEKOLAH DASAR\nDEPARTEMEN PEDAGOGIK\nFAKULTAS ILMU PENDIDIKAN\nUNIVERSITAS PENDIDIKAN INDONESIA\n2022\n\nKURIKULUM MERDEKA\nPENYUSUN : SOPIATUL PADILA\n2023</string>
    <string name="arahan_evaluasi">Bentuk evaluasi di bawah ini merupakan evaluasi Benar-Salah, klik "Benar" jika menurutmu pernyataan tersebut dianggap benar dan klik "Salah" jika menurutmu pernyataan tersebut dianggap salah!</string>
    <string name="soal_1">1. Sebuah aktivitas yang dilakukan oleh manusia untuk memenuhi kebutuhan hidupnya disebut dengan Kegiatan Ekonomi.</string>
    <string name="soal_2">2. Produksi adalah kegiatan untuk menghasilkan suatu barang atau jasa. Pelaku dari kegiatan produksi disebut sebagai produsen. </string>
    <string name="soal_3">3. Contoh dari produksi adalah grosir yang menjual sembako untuk masyarakat.</string>
    <string name="soal_4">4. Orang yang melakukan distribusi disebut sebagai distributor.</string>
    <string name="soal_5">5. Kegiatan ekonomi yang menghasilkan nilai guna suatu barang atau jasa secara berangsur-angsur disebut dengan konsumsi.</string>
    <string name="soal_6">6. Ekonomi kreatif merupakan bidang perekonomian yang mengutamakan ide gagasan dan kreativitas dalam prosesnya.</string>
    <string name="soal_7">7. Badan yang bertanggung jawab dalam mengelola subsektor ekonomi kreatif adalah Baparekraf.</string>
    <string name="soal_8">8. Seni pertunjukan tidak termasuk kepada jenis dalam bidang ekonomi kreatif.</string>
    <string name="soal_9">9. Bidang perfilman, animasi, dan video dalam ekonomi kreatif meliputi penciptaan dan produksi berbagai program di televisi seperti acara game, kuis, acara ragam, hingga infotainment.</string>
    <string name="soal_10">10. Bidang desain dalam ekonomi kreatif meliputi segala kegiatan kreatif dalam hal desain, mulai dari desain interior, produk, grafis, industri, hingga desain untuk pemasaran produk</string>
    <string name="benar">Benar</string>
    <string name="salah">Salah</string>
    <string name="lembar_refleksi">Lembar Refleksi</string>
    <string name="evaluasi">Evaluasi Akhir</string>
    <string name="kunci_jawaban">Kunci Jawaban</string>
    <string name="soal_latihan">Soal Latihan</string>
    <string name="lembar_proyek">Lembar Proyek</string>
    <string name="ada_beberapa_macam_kegiatan_ekonomi_yang_dilakukan_dan_sering_kita_temui_di_masyarakat_kegiatan_ekonomi_itu_seperti_produksi_distribusi_dan_juga_konsumsi_untuk_mengetahui_lebih_jelas_kamu_bisa_klik_masing_masing_gambar_dari_jenis_kegiatan_ekonomi_di_bawah_ini">Ada beberapa macam kegiatan ekonomi yang dilakukan dan sering kita temui di masyarakat. Kegiatan ekonomi itu seperti <b>produksi, distribusi, dan juga konsumsi</b>. Untuk mengetahui lebih jelas, kamu bisa klik masing-masing gambar dari jenis kegiatan ekonomi di bawah ini!</string>
    <string name="sumber_gambar_https_ekonomi_bisnis_com">Sumber gambar :\nhttps://ekonomi.bisnis.com/</string>
    <string name="sumber_gambar_https_jatengprov_go_id">Sumber gambar :\nhttps://jatengprov.go.id/</string>
    <string name="sumber_gambar_nhttps_bandung_bisnis_com">Sumber gambar :\nhttps://bandung.bisnis.com/</string>
    <string name="berapa_harga_barang_dan_jasa">Berapa harga barang dan jasa yang kalian tetapkan?\n<i>(Bagaimana harga produk kalian jika dibandingkan dengan produk lain yang serupa? Pastikan harga yang kalian tetapkan lebih dari modal per produk)</i></string>
    <string name="berapa_keuntungan_yang_kalian_dapatkan">Berapa keuntungan yang kalian dapatkan?\n<i>(harga per barang = modal : jumlah produk yang dapat dibuat) ( harga per jasa = modal : jumlah jam kerja)</i></string>
    <string name="apa_yang_akan_kalian_lakukan_dengan_keuntungan">Apa yang akan kalian lakukan dengan keuntungan tersebut?\n<i>(Apakah kalian akan menggunakannya untuk melanjutkan bisnis ini? Ditabung untuk keperluan sekolah? Disumbangkan? Jelaskan alasan kalian.)</i></string>
</resources>